--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
         <h2 class="subHeader2">Photo Gallery</h2>
         <div class="photoGallery" width="60%">
-            <img src="images/img01" alt="Image 1">
-            <img src="images/img01" alt="Image 1">
-            <img src="images/img01" alt="Image 1">
-            <img src="images/img01" alt="Image 1">
+            <img src="images/img01.jpg" alt="Image 1">
+            <img src="images/img02.jpg" alt="Image 1">
+            <img src="images/img03.jpg" alt="Image 1">
+            <img src="images/img04.jpg" alt="Image 1">
             <img src="images/img01" alt="Image 1">
         </div>
     </body>
