--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="images/img02.jpg" alt="Image 1">
             <img src="images/img03.jpg" alt="Image 1">
             <img src="images/img04.jpg" alt="Image 1">
-            <img src="images/img01" alt="Image 1">
+            <img src="images/img05.jpg" alt="Image 1">
         </div>
     </body>
 </html>
