put images insode figures to add captions

--- a/index.html
+++ b/index.html
@@ -28,11 +28,26 @@
 
         <h2 class="subHeader2">Photo Gallery</h2>
         <div class="photoGallery">
-            <img src="images/img01.jpg" alt="Image 1">
-            <img src="images/img02.jpg" alt="Image 1">
-            <img src="images/img03.jpg" alt="Image 1">
-            <img src="images/img04.jpg" alt="Image 1">
-            <img src="images/img05.jpg" alt="Image 1">
+            <figure>
+                <img src="images/img01.jpg">
+                <figcaption>Self driving RC car side view.</figcaption>
+            </figure>
+            <figure>
+                <img src="images/img02.jpg">
+                <figcaption>Self driving RC car top view.</figcaption>
+            </figure>
+            <figure>
+                <img src="images/img03.jpg">
+                <figcaption>Close up of the camera the car uses to see.</figcaption>
+            </figure>
+            <figure>
+                <img src="images/img04.jpg">
+                <figcaption>360 degree LiDAR sensor.</figcaption>
+            </figure>
+            <figure>
+                <img src="images/img05.jpg">
+                <figcaption>Top view with screen visible.</figcaption>
+            </figure>
         </div>
     </body>
 </html>
