added more projects to the table

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
         <h2 class="subHeader2">Projects</h2>
         <table align="center"> 
             <thead> 
-                <tr> <th>Project Name</th> <th>Description</th> <th>Link</th> </tr> 
+                <tr> <th>Project Name</th> <th>Description</th> <th>Completed?</th> <th>Link</th> </tr> 
             </thead> 
             <tbody> 
-                <tr> <td>COMP 150 Term Project</td> <td>A C++ application to help you study for your next exam!</td> <td><a href="https://github.com/treybertram06/COMP150TermProject">View Project</a></td> </tr>
-                <tr> <td>Game Dev 12 Final Project</td> <td>A web-based clone of The Binding of Issac made in Unity.</td> <td><a href="https://github.com/treybertram06/GameDevFinal">View Project</a></td> </tr>
-                <tr> <td>WiFi RC Controller</td> <td>A browser-based 2-axis controller that runs on a Seeeduino XIAO-ESP32</td> <td><a href="https://github.com/treybertram06/WiFiControlledRC">View Project</a></td> </tr>
+                <tr> <td>COMP 150 Term Project</td> <td>A C++ application to help you study for your next exam!</td> <td>No</td> <td><a href="https://github.com/treybertram06/COMP150TermProject">View Project</a></td> </tr>
+                <tr> <td>Game Dev 12 Final Project</td> <td>A web-based clone of The Binding of Issac made in Unity.</td> <td>Yes</td> <td><a href="https://github.com/treybertram06/GameDevFinal">View Project</a></td> </tr>
+                <tr> <td>WiFi RC Controller</td> <td>A browser-based 2-axis controller that runs on a Seeeduino XIAO-ESP32</td> <td>Yes</td> <td><a href="https://github.com/treybertram06/WiFiControlledRC">View Project</a></td> </tr>
+                <tr> <td>iOS To-Do List App</td> <td>Basic to-do list app for iOS</td> <td>Yes</td> <td><a href="https://github.com/treybertram06/todoList_iOS">View Project</a></td> </tr>
+                <tr> <td>C Webserver</td> <td>Webserver written in C that automatically adds new routes when you put a new HTML page in the correct directory</td> <td>Yes</td> <td><a href="https://github.com/treybertram06/webserverInC">View Project</a></td> </tr>
+
             </tbody> 
             <tfoot> 
                 <tr> <td colspan="4">You can find all my work here: <a href="https://github.com/treybertram06">Github</a> </td> </tr> 
