fixed errors in html validator

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>CIS 145 Project</title>
@@ -5,12 +6,12 @@
 
     </head>
     <body class="poppins-regular">
-        <h1 align="center" id="pageTitle">Project Portfolio</h1>
+        <h1 id="pageTitle">Project Portfolio</h1>
         <hr>
         <br>
 
         <h2 class="subHeader2">Projects</h2>
-        <table align="center"> 
+        <table> 
             <thead> 
                 <tr> <th>Project Name</th> <th>Description</th> <th>Completed?</th> <th>Link</th> </tr> 
             </thead> 
