added form and form css

--- a/index.html
+++ b/index.html
@@ -53,5 +53,24 @@
                 <figcaption>Top view with screen visible.</figcaption>
             </figure>
         </div>
+
+        <br><br>
+
+        <h2 class="subHeader2">Contact</h2>
+            <form method="POST" class="contactForm">
+                <label for="name">Name: </label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email: </label>
+                <input type="text" id="email" name="email" required>
+
+                <label for="subject">Subject: </label>
+                <input type="text" id="subject" name="subject" required>
+
+                <label for="message">Message: </label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+
+                <button tyoe="submit">Submit</button>
+            </form>
     </body>
 </html>
