--- a/index.html
+++ b/index.html
@@ -56,21 +56,73 @@
 
         <br><br>
 
-        <h2 class="subHeader2">Contact</h2>
-            <form method="POST" class="contactForm">
+        <h2 class="subHeader2">Register for Updates</h2>
+        <form action="/submitForm" method="POST" class="contactForm" aria-live="polite">
+            <fieldset>
+                <legend>Personal Details</legend>
+
                 <label for="name">Name: </label>
-                <input type="text" id="name" name="name" required>
+                <input type="text" placeholder="John Smith" id="name" name="name" required aria-required="true">
+                <span class="error-message" aria-live="polite">Please enter your name.</span>
 
                 <label for="email">Email: </label>
-                <input type="text" id="email" name="email" required>
+                <input type="email" placeholder="email@example.com" id="email" name="email" required aria-required="true">
+                <span class="error-message" aria-live="polite">Please enter a valid email address.</span>
 
-                <label for="subject">Subject: </label>
-                <input type="text" id="subject" name="subject" required>
+                <label for="password">Password: </label>
+                <input type="password" placeholder="p4SSw0rd!" id="password" name="password" required aria-required="true">
+                <span class="error-message" aria-live="polite">Please enter a password.</span>
 
-                <label for="message">Message: </label>
-                <textarea id="message" name="message" rows="5" required></textarea>
+                <label for="birthdate">Birth Date: </label>
+                <input type="date" id="birthdate" name="birthdate" required aria-required="true">
+                <span class="error-message" aria-live="polite">Please enter your birth date.</span>
+            </fieldset>
 
-                <button tyoe="submit">Submit</button>
-            </form>
+            <fieldset>
+                <legend>Preferences</legend>
+
+                <label>Are you a new or existing user?</label><br>
+                <label for="newUser">New</label>
+                <input type="radio" id="newUser" name="userType" value="new" required>
+                <label for="existingUser">Existing</label>
+                <input type="radio" id="existingUser" name="userType" value="existing">
+                <br><br>
+                <label>Interests:</label><br>
+                <label for="robotics">Robotics</label>
+                <input type="checkbox" id="robotics" name="interests" value="robotics">
+
+                <label for="music">Music</label>
+                <input type="checkbox" id="music" name="interests" value="music">
+
+                <label for="programming">Programming</label>
+                <input type="checkbox" id="programming" name="interests" value="programming">
+
+                <label for="country">Country: </label>
+                <select id="country" name="country" required aria-required="true">
+                    <option value="">Select your country</option>
+                    <option value="ca">Canada</option>
+                    <option value="us">United States</option>
+                    <option value="uk">Mexico</option>
+                </select>
+                <span class="error-message">Please select your country.</span>
+            </fieldset>
+
+            <fieldset>
+                <legend>Upload</legend>
+
+                <label for="profilePicture">Profile Picture: </label>
+                <input type="file" id="profilePicture" name="profilePicture" accept="image/*">
+            </fieldset>
+
+            <fieldset>
+                <legend>Comments</legend>
+
+                <label for="comments">Comments: </label>
+                <textarea id="comments" name="comments" rows="5"></textarea>
+            </fieldset>
+
+            <input type="reset" value="Reset">
+            <button type="submit">Submit</button>
+        </form>
     </body>
 </html>
